--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,8 @@
 
 *
 {
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 /* GENERAL */
