--- a/css/index.css
+++ b/css/index.css
@@ -39,6 +39,11 @@
 
  }
 
+
+ #main-content > main{
+  background-color: #151921;
+}
+
  #main-content > aside{
     width: 200px;
     position: relative;
@@ -52,7 +57,7 @@
  }
 
  aside div:first-child{
-  padding: 10px 20px;
+  padding: 10px 10px;
  }
 
  #main-content > aside >section div  nav  ul li a {
@@ -60,18 +65,52 @@
   text-decoration: none;
   color:grey;
  }
+ #main-content > aside >section div  nav  ul li  {
+  padding: 10px 0;
+  font-weight: bold;
+ }
  #main-content > aside >section div nav ul {
   list-style: none;
  }
 
 
 
+ #main-content > aside{
+  background-color: black;
+}
+
+.fa-plus{
+  padding: 5px;
+  background-color:#76787D;
+  font-size: 2em;
+  margin-right: 10px ;
+  
+}
+
+.plus{
+  display: flex;
+  align-items: center;
+}
+
 .users{
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: red;
+  background-color: black;
+}
+
+.fa-circle-down{
+  padding-bottom: 10px;
+  font-size: 1.2em;
+}
+.fa-circle-user{
+  padding-top: 10px;
+  font-size: 1.2em;
+}
+
+section > div:first-child {
+  color:#76787D;
 }
  /* MIAN  */
 
@@ -100,6 +139,7 @@ justify-content: flex-end;
   padding: 10px 20px;
   border: 2px solid white;
   border-radius: 30px;
+  ;
 }
 
 #main-content > main > section {
@@ -131,7 +171,10 @@ width
 } 
 
 h2{
-  color: white
+  color: white;
+}
+h3{
+  color: white;
 }
 
 h4{
@@ -169,9 +212,15 @@ img{
 .cover:hover .overlay{
   display: block;
   transition: 0.3s;
-
 }
 
+.container > h5 {
+  padding: 10px;
+}
+
+.border-redius{
+  border-radius: 50%;
+}
 
   /* FOOTER  */
 
@@ -238,17 +287,13 @@ footer > *{
     /* border: 1px solid black; */
   }
 
-  #main-content > aside{
-    background-color: brown;
-  }
+  
 
   .debug #main-content{
     background-color: lightcoral;
   }
 
-  #main-content > main{
-    background-color: #151921;
-  }
+  
 
   .debug footer{
     /* background-color: aquamarine; */
